--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ fbq('track', 'PageView');
  
          
 <img  width="200" height="200"  preload="none"  src="img/UtyaDuck-512px-5.gif" alt=""> </img>
-<a href="https://sportbank.ua/r/?ref=aPHDhK8K"><img src="img/sportbank2.jpg" width="310" style="border-radius: 15px;" ></a>
+<a href="https://sportbank.ua/r/?ref=aPHDhK8K"><img src="img/sportbank2.jpg" width="310" height="200" style="border-radius: 15px;" ></a>
 
 
 
