--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ fbq('track', 'PageView');
  
          
 <img  width="200" height="200"  preload="none"  src="img/UtyaDuck-512px-18.gif" alt=""> </img>
-<a href="https://sportbank.ua/r/?ref=aPHDhK8K"><img src="img/sportbank3.jpg" width="350" style="border-radius: 15px;" ></a>
+
 
 
 
@@ -64,7 +64,7 @@ fbq('track', 'PageView');
       <div class="form">
         <div data-aos="fade-up-right" class="container"></div>
         <form class="main-form form-fields" action="send.php" method="get"></form>
-
+<a href="https://sportbank.ua/r/?ref=aPHDhK8K"><img src="img/sportbank3.jpg" width="350" style="border-radius: 15px;" ></a> <br>
         <img src="img/IMG_20221123_131934_563.jpg" width="330" style="border-radius: 14px;" ></a> <br> 
           <img src="img/photo_2023-02-08_17-44-44.png" width="285" style="border-radius: 14px;" ></a>
      <strong><P>І НАШ МЕНЕДЖЕР З ВАМИ ЗВ'ЯЖЕТЬСЯ</P></strong> <br>
