--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ fbq('track', 'PageView');
 
 
 <div class="slideshow">
-  <img class="active" src="img1.jpg" alt="Фото 1">
-  <img src="img2.jpg" alt="Фото 2">
+  <img class="active" src="img/sportbank4.jpg" alt="Фото 1">
+  <img src="img/sportbank4.jpg" alt="Фото 2">
   <img src="img3.jpg" alt="Фото 3">
   <a class="prev" href="#">&lt;</a>
   <a class="next" href="#">&gt;</a>
