--- a/index.html
+++ b/index.html
@@ -54,7 +54,42 @@ fbq('track', 'PageView');
   <a class="next" href="#">&gt;</a>
 </div>
 
+<script>
+    var slideIndex = 0;
+    var slides = document.getElementsByTagName("img");
+    var prevButton = document.querySelector(".prev");
+    var nextButton = document.querySelector(".next");
 
+    showSlides();
+
+    function showSlides() {
+      for (var i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      slideIndex++;
+      if (slideIndex > slides.length) {
+        slideIndex = 1;
+      }
+      slides[slideIndex - 1].style.display = "block";
+      setTimeout(showSlides, 5000);
+    }
+
+    prevButton.addEventListener("click", function() {
+      slideIndex--;
+      if (slideIndex < 1) {
+        slideIndex = slides.length;
+      }
+      showSlides();
+    });
+
+    nextButton.addEventListener("click", function() {
+      slideIndex++;
+      if (slideIndex > slides.length) {
+        slideIndex = 1;
+      }
+      showSlides();
+    });
+  </script>
 
 
 
