--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ fbq('track', 'PageView');
 
 <div class="slideshow">
   <img class="active" src="img/sportbank4.jpg" alt="Фото 1">
-  <img src="img/sportbank5.jpg" alt="Фото 2">
+ <a href="https://sportbank.ua/r/?ref=aPHDhK8K"> <img src="img/sportbank5.jpg" alt="Фото 2"></a>
   <img src="img3.jpg" alt="Фото 3">
   <a class="prev" href="#">&lt;</a>
   <a class="next" href="#">&gt;</a>
