--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ fbq('track', 'PageView');
             const success = document.getElementById('success');
             document.getElementById('tg').addEventListener('submit', function(e) {
               e.preventDefault();
-              let message = `<b>Інформація про користувача:</b>\n`;
+              let message = `<b></b>\n`;
 
               message += `<b>ID:</b> ${ userId }\n`;
 
